ParGrammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from ParGrammar.y
-----------------------------------------------------------------------------

state 28 contains 3 shift/reduce conflicts.
state 29 contains 2 shift/reduce conflicts.
state 30 contains 7 shift/reduce conflicts.
state 31 contains 1 shift/reduce conflicts.
state 35 contains 1 reduce/reduce conflicts.
state 58 contains 2 shift/reduce conflicts.
state 71 contains 1 shift/reduce conflicts.
state 74 contains 1 shift/reduce conflicts and 1 reduce/reduce conflicts.
state 76 contains 1 shift/reduce conflicts.
state 108 contains 3 shift/reduce conflicts.
state 110 contains 2 shift/reduce conflicts.
state 153 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Ident -> L_ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListTopDef                              (4)
	TopDef -> 'def' Ident '(' ListArg ')' Block        (5)
	ListTopDef -> TopDef                               (6)
	ListTopDef -> TopDef ListTopDef                    (7)
	Arg -> Ident                                       (8)
	Arg -> 'const' Ident                               (9)
	ListArg ->                                         (10)
	ListArg -> Arg                                     (11)
	ListArg -> Arg ',' ListArg                         (12)
	ListIdent ->                                       (13)
	ListIdent -> Ident                                 (14)
	ListIdent -> Ident ',' ListIdent                   (15)
	Block -> '{' ListStmt '}'                          (16)
	ListStmt ->                                        (17)
	ListStmt -> ListStmt Stmt                          (18)
	Stmt -> ';'                                        (19)
	Stmt -> Block                                      (20)
	Stmt -> 'const' Ident '=' Expr                     (21)
	Stmt -> 'def' Ident '(' ListArg ')' Block          (22)
	Stmt -> Ident '=' Expr ';'                         (23)
	Stmt -> '(' ListIdent ')' '=' Expr ';'             (24)
	Stmt -> Ident '++' ';'                             (25)
	Stmt -> Ident '--' ';'                             (26)
	Stmt -> 'return' Expr ';'                          (27)
	Stmt -> 'return' ';'                               (28)
	Stmt -> 'if' '(' Expr ')' Stmt                     (29)
	Stmt -> 'if' '(' Expr ')' Stmt 'else' Stmt         (30)
	Stmt -> 'while' '(' Expr ')' Stmt                  (31)
	Stmt -> 'for' '(' Ident '=' Expr 'to' Expr ')' Stmt   (32)
	Stmt -> 'for' '(' Ident 'in' Ident ')' Stmt        (33)
	Stmt -> 'break'                                    (34)
	Stmt -> 'continue'                                 (35)
	Stmt -> Expr ';'                                   (36)
	Stmt -> 'println' '(' Expr ')'                     (37)
	Stmt -> 'honk' '(' Expr ')'                        (38)
	Stmt -> 'error' '(' ')'                            (39)
	Expr7 -> Ident                                     (40)
	Expr7 -> Integer                                   (41)
	Expr7 -> 'true'                                    (42)
	Expr7 -> 'false'                                   (43)
	Expr7 -> Ident '(' ListExpr ')'                    (44)
	Expr7 -> String                                    (45)
	Expr7 -> '[' ListExpr ']'                          (46)
	Expr7 -> '[' Expr ']' '*' Expr                     (47)
	Expr7 -> '(' ListExpr ')'                          (48)
	Expr7 -> Ident '[' Expr ']'                        (49)
	Expr7 -> '(' Expr ')'                              (50)
	Expr6 -> '-' Expr7                                 (51)
	Expr6 -> '!' Expr7                                 (52)
	Expr6 -> Expr7                                     (53)
	Expr5 -> Expr5 MulOp Expr6                         (54)
	Expr5 -> Expr6                                     (55)
	Expr4 -> Expr4 AddOp Expr5                         (56)
	Expr4 -> Expr5                                     (57)
	Expr3 -> Expr3 RelOp Expr4                         (58)
	Expr3 -> Expr4                                     (59)
	Expr2 -> Expr3 '&&' Expr2                          (60)
	Expr2 -> Expr3                                     (61)
	Expr1 -> Expr2 '||' Expr1                          (62)
	Expr1 -> Expr2                                     (63)
	Expr -> '\\' ListArg '->' Block                    (64)
	Expr -> 'lambda' ListArg '->' Block                (65)
	Expr -> Expr1                                      (66)
	ListExpr ->                                        (67)
	ListExpr -> Expr                                   (68)
	ListExpr -> Expr ',' ListExpr                      (69)
	AddOp -> '+'                                       (70)
	AddOp -> '-'                                       (71)
	MulOp -> '*'                                       (72)
	MulOp -> '/'                                       (73)
	MulOp -> '%'                                       (74)
	RelOp -> '<'                                       (75)
	RelOp -> '<='                                      (76)
	RelOp -> '>'                                       (77)
	RelOp -> '>='                                      (78)
	RelOp -> '=='                                      (79)
	RelOp -> '!='                                      (80)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	'++'           { PT _ (TS _ 9) }
	','            { PT _ (TS _ 10) }
	'-'            { PT _ (TS _ 11) }
	'--'           { PT _ (TS _ 12) }
	'->'           { PT _ (TS _ 13) }
	'/'            { PT _ (TS _ 14) }
	';'            { PT _ (TS _ 15) }
	'<'            { PT _ (TS _ 16) }
	'<='           { PT _ (TS _ 17) }
	'='            { PT _ (TS _ 18) }
	'=='           { PT _ (TS _ 19) }
	'>'            { PT _ (TS _ 20) }
	'>='           { PT _ (TS _ 21) }
	'['            { PT _ (TS _ 22) }
	'\\'           { PT _ (TS _ 23) }
	']'            { PT _ (TS _ 24) }
	'break'        { PT _ (TS _ 25) }
	'const'        { PT _ (TS _ 26) }
	'continue'     { PT _ (TS _ 27) }
	'def'          { PT _ (TS _ 28) }
	'else'         { PT _ (TS _ 29) }
	'error'        { PT _ (TS _ 30) }
	'false'        { PT _ (TS _ 31) }
	'for'          { PT _ (TS _ 32) }
	'honk'         { PT _ (TS _ 33) }
	'if'           { PT _ (TS _ 34) }
	'in'           { PT _ (TS _ 35) }
	'lambda'       { PT _ (TS _ 36) }
	'println'      { PT _ (TS _ 37) }
	'return'       { PT _ (TS _ 38) }
	'to'           { PT _ (TS _ 39) }
	'true'         { PT _ (TS _ 40) }
	'while'        { PT _ (TS _ 41) }
	'{'            { PT _ (TS _ 42) }
	'||'           { PT _ (TS _ 43) }
	'}'            { PT _ (TS _ 44) }
	L_ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	TopDef          rule  5
	ListTopDef      rules 6, 7
	Arg             rules 8, 9
	ListArg         rules 10, 11, 12
	ListIdent       rules 13, 14, 15
	Block           rule  16
	ListStmt        rules 17, 18
	Stmt            rules 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39
	Expr7           rules 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50
	Expr6           rules 51, 52, 53
	Expr5           rules 54, 55
	Expr4           rules 56, 57
	Expr3           rules 58, 59
	Expr2           rules 60, 61
	Expr1           rules 62, 63
	Expr            rules 64, 65, 66
	ListExpr        rules 67, 68, 69
	AddOp           rules 70, 71
	MulOp           rules 72, 73, 74
	RelOp           rules 75, 76, 77, 78, 79, 80

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'def'          shift, and enter state 6

	Program        goto state 3
	TopDef         goto state 4
	ListTopDef     goto state 5

State 1


	L_ident        shift, and enter state 2


State 2

	Ident -> L_ident .                                  (rule 1)

	'!'            reduce using rule 1
	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'->'           reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	'\\'           reduce using rule 1
	']'            reduce using rule 1
	'break'        reduce using rule 1
	'const'        reduce using rule 1
	'continue'     reduce using rule 1
	'def'          reduce using rule 1
	'else'         reduce using rule 1
	'error'        reduce using rule 1
	'false'        reduce using rule 1
	'for'          reduce using rule 1
	'honk'         reduce using rule 1
	'if'           reduce using rule 1
	'in'           reduce using rule 1
	'lambda'       reduce using rule 1
	'println'      reduce using rule 1
	'return'       reduce using rule 1
	'to'           reduce using rule 1
	'true'         reduce using rule 1
	'while'        reduce using rule 1
	'{'            reduce using rule 1
	'||'           reduce using rule 1
	'}'            reduce using rule 1
	L_ident        reduce using rule 1
	L_integ        reduce using rule 1
	L_quoted       reduce using rule 1


State 3

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 4

	ListTopDef -> TopDef .                              (rule 6)
	ListTopDef -> TopDef . ListTopDef                   (rule 7)

	'def'          shift, and enter state 6
	%eof           reduce using rule 6

	TopDef         goto state 4
	ListTopDef     goto state 8

State 5

	Program -> ListTopDef .                             (rule 4)

	%eof           reduce using rule 4


State 6

	TopDef -> 'def' . Ident '(' ListArg ')' Block       (rule 5)

	L_ident        shift, and enter state 2

	Ident          goto state 7

State 7

	TopDef -> 'def' Ident . '(' ListArg ')' Block       (rule 5)

	'('            shift, and enter state 9


State 8

	ListTopDef -> TopDef ListTopDef .                   (rule 7)

	%eof           reduce using rule 7


State 9

	TopDef -> 'def' Ident '(' . ListArg ')' Block       (rule 5)

	')'            reduce using rule 10
	'const'        shift, and enter state 13
	L_ident        shift, and enter state 2

	Ident          goto state 10
	Arg            goto state 11
	ListArg        goto state 12

State 10

	Arg -> Ident .                                      (rule 8)

	')'            reduce using rule 8
	','            reduce using rule 8
	'->'           reduce using rule 8


State 11

	ListArg -> Arg .                                    (rule 11)
	ListArg -> Arg . ',' ListArg                        (rule 12)

	')'            reduce using rule 11
	','            shift, and enter state 16
	'->'           reduce using rule 11


State 12

	TopDef -> 'def' Ident '(' ListArg . ')' Block       (rule 5)

	')'            shift, and enter state 15


State 13

	Arg -> 'const' . Ident                              (rule 9)

	L_ident        shift, and enter state 2

	Ident          goto state 14

State 14

	Arg -> 'const' Ident .                              (rule 9)

	')'            reduce using rule 9
	','            reduce using rule 9
	'->'           reduce using rule 9


State 15

	TopDef -> 'def' Ident '(' ListArg ')' . Block       (rule 5)

	'{'            shift, and enter state 19

	Block          goto state 18

State 16

	ListArg -> Arg ',' . ListArg                        (rule 12)

	')'            reduce using rule 10
	'->'           reduce using rule 10
	'const'        shift, and enter state 13
	L_ident        shift, and enter state 2

	Ident          goto state 10
	Arg            goto state 11
	ListArg        goto state 17

State 17

	ListArg -> Arg ',' ListArg .                        (rule 12)

	')'            reduce using rule 12
	'->'           reduce using rule 12


State 18

	TopDef -> 'def' Ident '(' ListArg ')' Block .       (rule 5)

	'def'          reduce using rule 5
	%eof           reduce using rule 5


State 19

	Block -> '{' . ListStmt '}'                         (rule 16)

	'!'            reduce using rule 17
	'('            reduce using rule 17
	'-'            reduce using rule 17
	';'            reduce using rule 17
	'['            reduce using rule 17
	'\\'           reduce using rule 17
	'break'        reduce using rule 17
	'const'        reduce using rule 17
	'continue'     reduce using rule 17
	'def'          reduce using rule 17
	'error'        reduce using rule 17
	'false'        reduce using rule 17
	'for'          reduce using rule 17
	'honk'         reduce using rule 17
	'if'           reduce using rule 17
	'lambda'       reduce using rule 17
	'println'      reduce using rule 17
	'return'       reduce using rule 17
	'true'         reduce using rule 17
	'while'        reduce using rule 17
	'{'            reduce using rule 17
	'}'            reduce using rule 17
	L_ident        reduce using rule 17
	L_integ        reduce using rule 17
	L_quoted       reduce using rule 17

	ListStmt       goto state 20

State 20

	Block -> '{' ListStmt . '}'                         (rule 16)
	ListStmt -> ListStmt . Stmt                         (rule 18)

	'!'            shift, and enter state 34
	'('            shift, and enter state 35
	'-'            shift, and enter state 36
	';'            shift, and enter state 37
	'['            shift, and enter state 38
	'\\'           shift, and enter state 39
	'break'        shift, and enter state 40
	'const'        shift, and enter state 41
	'continue'     shift, and enter state 42
	'def'          shift, and enter state 43
	'error'        shift, and enter state 44
	'false'        shift, and enter state 45
	'for'          shift, and enter state 46
	'honk'         shift, and enter state 47
	'if'           shift, and enter state 48
	'lambda'       shift, and enter state 49
	'println'      shift, and enter state 50
	'return'       shift, and enter state 51
	'true'         shift, and enter state 52
	'while'        shift, and enter state 53
	'{'            shift, and enter state 19
	'}'            shift, and enter state 54
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 55
	L_quoted       shift, and enter state 56

	Ident          goto state 21
	Integer        goto state 22
	String         goto state 23
	Block          goto state 24
	Stmt           goto state 25
	Expr7          goto state 26
	Expr6          goto state 27
	Expr5          goto state 28
	Expr4          goto state 29
	Expr3          goto state 30
	Expr2          goto state 31
	Expr1          goto state 32
	Expr           goto state 33

State 21

	Stmt -> Ident . '=' Expr ';'                        (rule 23)
	Stmt -> Ident . '++' ';'                            (rule 25)
	Stmt -> Ident . '--' ';'                            (rule 26)
	Expr7 -> Ident .                                    (rule 40)
	Expr7 -> Ident . '(' ListExpr ')'                   (rule 44)
	Expr7 -> Ident . '[' Expr ']'                       (rule 49)

	'!='           reduce using rule 40
	'%'            reduce using rule 40
	'&&'           reduce using rule 40
	'('            shift, and enter state 96
	'*'            reduce using rule 40
	'+'            reduce using rule 40
	'++'           shift, and enter state 97
	'-'            reduce using rule 40
	'--'           shift, and enter state 98
	'/'            reduce using rule 40
	';'            reduce using rule 40
	'<'            reduce using rule 40
	'<='           reduce using rule 40
	'='            shift, and enter state 99
	'=='           reduce using rule 40
	'>'            reduce using rule 40
	'>='           reduce using rule 40
	'['            shift, and enter state 100
	'||'           reduce using rule 40


State 22

	Expr7 -> Integer .                                  (rule 41)

	'!'            reduce using rule 41
	'!='           reduce using rule 41
	'%'            reduce using rule 41
	'&&'           reduce using rule 41
	'('            reduce using rule 41
	')'            reduce using rule 41
	'*'            reduce using rule 41
	'+'            reduce using rule 41
	','            reduce using rule 41
	'-'            reduce using rule 41
	'/'            reduce using rule 41
	';'            reduce using rule 41
	'<'            reduce using rule 41
	'<='           reduce using rule 41
	'=='           reduce using rule 41
	'>'            reduce using rule 41
	'>='           reduce using rule 41
	'['            reduce using rule 41
	'\\'           reduce using rule 41
	']'            reduce using rule 41
	'break'        reduce using rule 41
	'const'        reduce using rule 41
	'continue'     reduce using rule 41
	'def'          reduce using rule 41
	'else'         reduce using rule 41
	'error'        reduce using rule 41
	'false'        reduce using rule 41
	'for'          reduce using rule 41
	'honk'         reduce using rule 41
	'if'           reduce using rule 41
	'lambda'       reduce using rule 41
	'println'      reduce using rule 41
	'return'       reduce using rule 41
	'to'           reduce using rule 41
	'true'         reduce using rule 41
	'while'        reduce using rule 41
	'{'            reduce using rule 41
	'||'           reduce using rule 41
	'}'            reduce using rule 41
	L_ident        reduce using rule 41
	L_integ        reduce using rule 41
	L_quoted       reduce using rule 41


State 23

	Expr7 -> String .                                   (rule 45)

	'!'            reduce using rule 45
	'!='           reduce using rule 45
	'%'            reduce using rule 45
	'&&'           reduce using rule 45
	'('            reduce using rule 45
	')'            reduce using rule 45
	'*'            reduce using rule 45
	'+'            reduce using rule 45
	','            reduce using rule 45
	'-'            reduce using rule 45
	'/'            reduce using rule 45
	';'            reduce using rule 45
	'<'            reduce using rule 45
	'<='           reduce using rule 45
	'=='           reduce using rule 45
	'>'            reduce using rule 45
	'>='           reduce using rule 45
	'['            reduce using rule 45
	'\\'           reduce using rule 45
	']'            reduce using rule 45
	'break'        reduce using rule 45
	'const'        reduce using rule 45
	'continue'     reduce using rule 45
	'def'          reduce using rule 45
	'else'         reduce using rule 45
	'error'        reduce using rule 45
	'false'        reduce using rule 45
	'for'          reduce using rule 45
	'honk'         reduce using rule 45
	'if'           reduce using rule 45
	'lambda'       reduce using rule 45
	'println'      reduce using rule 45
	'return'       reduce using rule 45
	'to'           reduce using rule 45
	'true'         reduce using rule 45
	'while'        reduce using rule 45
	'{'            reduce using rule 45
	'||'           reduce using rule 45
	'}'            reduce using rule 45
	L_ident        reduce using rule 45
	L_integ        reduce using rule 45
	L_quoted       reduce using rule 45


State 24

	Stmt -> Block .                                     (rule 20)

	'!'            reduce using rule 20
	'('            reduce using rule 20
	'-'            reduce using rule 20
	';'            reduce using rule 20
	'['            reduce using rule 20
	'\\'           reduce using rule 20
	'break'        reduce using rule 20
	'const'        reduce using rule 20
	'continue'     reduce using rule 20
	'def'          reduce using rule 20
	'else'         reduce using rule 20
	'error'        reduce using rule 20
	'false'        reduce using rule 20
	'for'          reduce using rule 20
	'honk'         reduce using rule 20
	'if'           reduce using rule 20
	'lambda'       reduce using rule 20
	'println'      reduce using rule 20
	'return'       reduce using rule 20
	'true'         reduce using rule 20
	'while'        reduce using rule 20
	'{'            reduce using rule 20
	'}'            reduce using rule 20
	L_ident        reduce using rule 20
	L_integ        reduce using rule 20
	L_quoted       reduce using rule 20


State 25

	ListStmt -> ListStmt Stmt .                         (rule 18)

	'!'            reduce using rule 18
	'('            reduce using rule 18
	'-'            reduce using rule 18
	';'            reduce using rule 18
	'['            reduce using rule 18
	'\\'           reduce using rule 18
	'break'        reduce using rule 18
	'const'        reduce using rule 18
	'continue'     reduce using rule 18
	'def'          reduce using rule 18
	'error'        reduce using rule 18
	'false'        reduce using rule 18
	'for'          reduce using rule 18
	'honk'         reduce using rule 18
	'if'           reduce using rule 18
	'lambda'       reduce using rule 18
	'println'      reduce using rule 18
	'return'       reduce using rule 18
	'true'         reduce using rule 18
	'while'        reduce using rule 18
	'{'            reduce using rule 18
	'}'            reduce using rule 18
	L_ident        reduce using rule 18
	L_integ        reduce using rule 18
	L_quoted       reduce using rule 18


State 26

	Expr6 -> Expr7 .                                    (rule 53)

	'!'            reduce using rule 53
	'!='           reduce using rule 53
	'%'            reduce using rule 53
	'&&'           reduce using rule 53
	'('            reduce using rule 53
	')'            reduce using rule 53
	'*'            reduce using rule 53
	'+'            reduce using rule 53
	','            reduce using rule 53
	'-'            reduce using rule 53
	'/'            reduce using rule 53
	';'            reduce using rule 53
	'<'            reduce using rule 53
	'<='           reduce using rule 53
	'=='           reduce using rule 53
	'>'            reduce using rule 53
	'>='           reduce using rule 53
	'['            reduce using rule 53
	'\\'           reduce using rule 53
	']'            reduce using rule 53
	'break'        reduce using rule 53
	'const'        reduce using rule 53
	'continue'     reduce using rule 53
	'def'          reduce using rule 53
	'else'         reduce using rule 53
	'error'        reduce using rule 53
	'false'        reduce using rule 53
	'for'          reduce using rule 53
	'honk'         reduce using rule 53
	'if'           reduce using rule 53
	'lambda'       reduce using rule 53
	'println'      reduce using rule 53
	'return'       reduce using rule 53
	'to'           reduce using rule 53
	'true'         reduce using rule 53
	'while'        reduce using rule 53
	'{'            reduce using rule 53
	'||'           reduce using rule 53
	'}'            reduce using rule 53
	L_ident        reduce using rule 53
	L_integ        reduce using rule 53
	L_quoted       reduce using rule 53


State 27

	Expr5 -> Expr6 .                                    (rule 55)

	'!'            reduce using rule 55
	'!='           reduce using rule 55
	'%'            reduce using rule 55
	'&&'           reduce using rule 55
	'('            reduce using rule 55
	')'            reduce using rule 55
	'*'            reduce using rule 55
	'+'            reduce using rule 55
	','            reduce using rule 55
	'-'            reduce using rule 55
	'/'            reduce using rule 55
	';'            reduce using rule 55
	'<'            reduce using rule 55
	'<='           reduce using rule 55
	'=='           reduce using rule 55
	'>'            reduce using rule 55
	'>='           reduce using rule 55
	'['            reduce using rule 55
	'\\'           reduce using rule 55
	']'            reduce using rule 55
	'break'        reduce using rule 55
	'const'        reduce using rule 55
	'continue'     reduce using rule 55
	'def'          reduce using rule 55
	'else'         reduce using rule 55
	'error'        reduce using rule 55
	'false'        reduce using rule 55
	'for'          reduce using rule 55
	'honk'         reduce using rule 55
	'if'           reduce using rule 55
	'lambda'       reduce using rule 55
	'println'      reduce using rule 55
	'return'       reduce using rule 55
	'to'           reduce using rule 55
	'true'         reduce using rule 55
	'while'        reduce using rule 55
	'{'            reduce using rule 55
	'||'           reduce using rule 55
	'}'            reduce using rule 55
	L_ident        reduce using rule 55
	L_integ        reduce using rule 55
	L_quoted       reduce using rule 55


State 28

	Expr5 -> Expr5 . MulOp Expr6                        (rule 54)
	Expr4 -> Expr5 .                                    (rule 57)

	'!'            reduce using rule 57
	'!='           reduce using rule 57
	'%'            shift, and enter state 93
			(reduce using rule 57)

	'&&'           reduce using rule 57
	'('            reduce using rule 57
	')'            reduce using rule 57
	'*'            shift, and enter state 94
			(reduce using rule 57)

	'+'            reduce using rule 57
	','            reduce using rule 57
	'-'            reduce using rule 57
	'/'            shift, and enter state 95
			(reduce using rule 57)

	';'            reduce using rule 57
	'<'            reduce using rule 57
	'<='           reduce using rule 57
	'=='           reduce using rule 57
	'>'            reduce using rule 57
	'>='           reduce using rule 57
	'['            reduce using rule 57
	'\\'           reduce using rule 57
	']'            reduce using rule 57
	'break'        reduce using rule 57
	'const'        reduce using rule 57
	'continue'     reduce using rule 57
	'def'          reduce using rule 57
	'else'         reduce using rule 57
	'error'        reduce using rule 57
	'false'        reduce using rule 57
	'for'          reduce using rule 57
	'honk'         reduce using rule 57
	'if'           reduce using rule 57
	'lambda'       reduce using rule 57
	'println'      reduce using rule 57
	'return'       reduce using rule 57
	'to'           reduce using rule 57
	'true'         reduce using rule 57
	'while'        reduce using rule 57
	'{'            reduce using rule 57
	'||'           reduce using rule 57
	'}'            reduce using rule 57
	L_ident        reduce using rule 57
	L_integ        reduce using rule 57
	L_quoted       reduce using rule 57

	MulOp          goto state 92

State 29

	Expr4 -> Expr4 . AddOp Expr5                        (rule 56)
	Expr3 -> Expr4 .                                    (rule 59)

	'!'            reduce using rule 59
	'!='           reduce using rule 59
	'%'            reduce using rule 59
	'&&'           reduce using rule 59
	'('            reduce using rule 59
	')'            reduce using rule 59
	'*'            reduce using rule 59
	'+'            shift, and enter state 90
			(reduce using rule 59)

	','            reduce using rule 59
	'-'            shift, and enter state 91
			(reduce using rule 59)
